dhall/tests/type-errors/unit/UnionConstructorFieldNotPresent.txt
Type error: error: MissingUnionField
 --> <current file>:1:0
  |
1 | < x : Bool >.y
  | ^^^^^^^^^^^^^^ MissingUnionField
  |
